# AOC-2024

./: .gitignore  CMakeLists.txt  main.cpp
01/: solution.cpp
02/: solution.cpp
03/: solution.cpp
04/: solution.cpp
05/: solution.cpp
06/: solution.cpp
07/: solution.cpp
08/: solution.cpp
src/: CMakeLists.txt  lib_aoc.cpp  lib_aoc.hpp
src/01/: CMakeLists.txt  day_01.cpp  day_01.hpp  test_sort.cpp
src/02/: CMakeLists.txt  day_02.cpp  day_02.hpp
src/03/: CMakeLists.txt  day_03.cpp  day_03.hpp
src/04/: CMakeLists.txt  day_04.cpp  day_04.hpp
src/05/: CMakeLists.txt  day_05.cpp  day_05.hpp
src/06/: CMakeLists.txt  day_06.cpp  day_06.hpp
src/07/: CMakeLists.txt  day_07.cpp  day_07.hpp
src/08/: CMakeLists.txt  day_08.cpp  day_08.hpp
src/09/: CMakeLists.txt  day_09.cpp  day_09.hpp
src/10/: CMakeLists.txt  day_10.cpp  day_10.hpp
src/11/: CMakeLists.txt  day_11.cpp  day_11.hpp
src/utils/: CMakeLists.txt  aoc_utils.cpp  aoc_utils.hpp  merge_sort.hpp
utils/: aoc_utils.hpp  merge_sort.hpp
