add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/01)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/02)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/03)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/04)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/05)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/06)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/07)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/08)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/09)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/10)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/11)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/utils)

add_library(lib_AOC-2024 SHARED lib_aoc.cpp)
target_include_directories(lib_AOC-2024 INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
target_compile_options(lib_AOC-2024 INTERFACE -O3 -g -Wall -march=native)
target_link_libraries(lib_AOC-2024 lib_01 lib_02 lib_03 lib_04 lib_05 lib_06 lib_07 lib_08 lib_09 lib_10 lib_11)